Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76564

The accept attribute of the <input /> tag does not work

XMLWordPrintable

    • Windows

      Setting <input type="file" id="filepicker" accept=".cpp, .html, .h, .png, .qdoc, .qml" />, then click the input button, the file dialog pops up, but the file type filter does not work.

      https://doc.qt.io/qt-5/qtwebengine-webengine-customdialogs-index-html.html

        For Gerrit Dashboard: QTBUG-76564
        # Subject Branch Project Status CR V

            michal Michal Klocek
            jason_zuo Jason Zuo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes