Support accept attribute of file input

Set name filters of QFileDialog and QML FileDialog to avoid presenting
all file types.

Task-number: QTBUG-76564
Change-Id: I321214a30bc7e875ad132b015c63282f4eb482bf
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>